hphp/test/zend/good/tests/classes/autoload/autoload_001.php
<?hh
<<__EntryPoint>>
function entrypoint_autoload_001(): void {

  var_dump(class_exists('autoload_root'));

  echo "===DONE===\n";
}
