hphp/test/zend/bad/ext/spl/tests/recursive_tree_iterator_003.php
<?php
try {
	new RecursiveTreeIterator(new ArrayIterator(array()));
} catch (InvalidArgumentException $e) {
	echo "InvalidArgumentException thrown\n";
}
?>
===DONE===